# rust_requests

./: Cargo.toml  readme.md  testing.json
src/: main.rs
