[package]
name = "rust_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
reqwest = "0.12.15"
reqwest-eventsource = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
