[package]
name = "rust_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-stream = "0.2.3"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
